src/css/base.css
:root {
  --main-color: #feffe8;
  /* --bg-color: #043558; */
  --button-bg-color: #15b4b9;
  --hover: #92fef8;

  --main-font: 'Poppins', sans-serif;
  --secondary-font: 'Delius Unicase', sans-serif;
}

html {
  scroll-behavior: smooth;
}

body {
  position: relative;
  font-family: var(--main-font);
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: var(--main-color);
  background: linear-gradient(
    90deg,
    #093e64 0%,
    #043558 29.81%,
    #043558 70.19%,
    #003053 100%
  );
}

h1,
h2 {
  font-family: var(--secondary-font);
  font-weight: 700;
  font-size: 26px;
  line-height: 1.4;
  text-transform: uppercase;
  text-align: center;
}

h1 {
  font-size: 32px;
  line-height: 1.28;
}

h2 {
  margin-bottom: 58px;
}

h3 {
  font-family: var(--secondary-font);
  font-weight: 500;
  font-size: 20px;
  line-height: 1.4;
  text-transform: capitalize;
}

.transition-base {
  transition: color 250ms ease, background-color 250ms ease, opacity 250ms ease,
    box-shadow 250ms ease;
}

section {
  scroll-margin-top: 60px;
}

@media screen and (min-width: 1200px) {
  h1 {
    font-size: 60px;
    line-height: 1;
  }

  h2 {
    font-size: 40px;
    margin-bottom: 83px;
  }

  h3 {
    font-family: var(--secondary-font);
    font-weight: 700;
    font-size: 32px;
    line-height: 1.4;
    text-transform: capitalize;
  }

  body {
    font-size: 20px;
  }

  section {
    scroll-margin-top: 76px;
  }
}

